--- a/Project/Android/app/src/main/res/drawable/progress_circle.xml
+++ b/Project/Android/app/src/main/res/drawable/progress_circle.xml
@@ -6,6 +6,7 @@
             android:thicknessRatio="8"
             android:useLevel="false">
             <solid android:color="@color/black" />
+            <corners android:radius="20dp" />
         </shape>
     </item>
     <item>
@@ -17,7 +18,7 @@
                 android:thicknessRatio="16"
                 android:useLevel="true">
                 <gradient
-                    android:endColor="@color/teal"
+                    android:endColor="@color/blue"
                     android:startColor="@color/black"
                     android:type="sweep" />
             </shape>
