--- a/Project/Android/app/src/main/res/layout/diploma_fragment_splash.xml
+++ b/Project/Android/app/src/main/res/layout/diploma_fragment_splash.xml
@@ -7,6 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/bg_splash_top"
@@ -24,8 +25,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             />
-
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
