--- a/Project/Android/app/src/main/res/layout/diploma_layout_technologies.xml
+++ b/Project/Android/app/src/main/res/layout/diploma_layout_technologies.xml
@@ -1,6 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <include
+        android:id="@+id/topPanel"
+        layout="@layout/diploma_top_bar"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/techRecycler"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/topPanel"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        android:visibility="visible"/>
+
+    <ProgressBar
+        android:id="@+id/bar"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/topPanel"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:indeterminateTint="@color/black"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
