--- a/Project/Android/app/src/main/res/layout/item_skill_approved.xml
+++ b/Project/Android/app/src/main/res/layout/item_skill_approved.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:paddingTop="24dp"
     android:paddingBottom="24dp"
     android:paddingStart="16dp"
     android:paddingEnd="16dp"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/orange_light"
+    android:layout_margin="10dp"
+    android:background="@drawable/item_skill_approved"
     android:orientation="horizontal"
     android:gravity="center">
 
